--- a/public/pages/home/index.html
+++ b/public/pages/home/index.html
@@ -268,7 +268,8 @@
         <section class="live-services">
             <div class="live-services-wrapper">
                 <div class="right__">
-                    <img src="/src/DSC_0045.jpg" alt="">
+                    <img src="/src/play.png" alt="play" class="play__button">
+                    <img src="/src/DSC_0045.jpg" alt="image_screen" class="live__image">
                 </div>
                 <div class="left__">
                     <span class="title__">
@@ -308,34 +309,155 @@
                 </div>
             </div>
         </section>
-        <section class="about-section">
-            <div class="about-section-container">
-
+        <section class="ministry-section">
+            <div class="ministry-section-container">
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="\src\rhapsody_is_now_in_8123_desktop_1802 x 512.jpg" alt="article">
+                    </div>
+                    <div class="box__text">
+                        <p>
+                            Rhapsody of Realities is no ordinary book: It’s a classic love-note from God to you, with
+                            the message of life! Oftentimes, referred to as the “Messenger Angel,” the devotional is a
+                            life guide designed to enhance your spiritual growth and development by bringing you a fresh
+                            perspective from God’s Word every day. With features like the day’s topic, a theme
+                            scripture, the day’s message, the daily confession and the Bible reading plan segment, it
+                            brings the richness of God’s Word into the lives of millions on a daily basis. </p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="/src/cofi.png" alt="artcile">
+                    </div>
+                    <div class="box__text">
+                        <p>
+                            The Chris Oyakhilome Foundation International (COFI) is a faith-based non-governmental,
+                            non-political organization under the direction of its visionary and legendary founder, the
+                            Man of God, Pastor Chris Oyakhilome. Through the promotion and sponsorship of charitable
+                            initiatives, COFI was established to help individuals, communities and nations lead
+                            purposeful and productive lives in the service of the Lord.
+                        </p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="/src/healing-school.jpeg" alt="artcile">
+                    </div>
+                    <div class="box__text">
+                        <p>The Healing School is a healing ministry of Rev Chris Oyakhilome (D.Sc,. D:D.), which takes
+                            divine healing to the nations.
+                            Each year, the Healing School hosts Healing Sessions in Johannesburg, South Africa and
+                            Toronto, Canada, where thousands receive their healing and miracles in an atmosphere of
+                            faith and the manifest presence of the Holy Spirit.
+                            Visiting ministers from around the world also come to the Healing School through the special
+                            Ministers’ Visitation Program, which affords them the opportunity to witness the miraculous
+                            works of the Spirit in our day.
+                        </p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="/src/prayathon.webp" alt="artcile">
+                    </div>
+                    <div class="box__text">
+                        <p>The Pastor Chris Live Pray-A-Thon is a nonstop, global prayer marathon led by the Man of God,
+                            Pastor Chris, and members of the Pastor Chris Live prayer network. Now in its third
+                            consecutive year, Christians from around the world have led an unbroken chain of prayer, in
+                            15 minute segments, every day since January 2020</p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="/src/uneding.jpg" alt="artcile">
+                    </div>
+                    <div class="box__text">
+                        <p>
+                            The Pastor Chris Live Unending Praise, is a year long, round-the-clock chain of unending
+                            praise and worship to the Lord, with Spirit filled songs from Loveworld. The maiden edition
+                            held in the month of June 2022, and was a most uplifting program, which set the stage for
+                            this next phase, which began March 27, 2023 and will run till March 27, 2024, glory to God!
+                            Join the praise, which runs in blocks of 30min every single hour of every day for the whole
+                            year.
+                        </p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="/src/1693334152.png" alt="artcile">
+                    </div>
+                    <div class="box__text">
+                        <p>
+                            Through an anointed ministry spanning over 30 years, Pastor, Teacher, Healing Minister,
+                            Television Host, and Best Selling Author, Chris Oyakhilome Ph.D has helped millions
+                            experience a victorious and purposeful life in God's Word. The Pastor Chris Digital Library
+                            is a mobile platform that let’s users access hundreds of audio and video messages by Pastor
+                            Chris, spanning various life issues, such as Healing and Health, Faith, Christian Living,
+                            Fellowship with the Holy Spirit, Prayer, Prosperity and Finance, from anywhere at anytime.
+                        </p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="/src/LWEX.jpg" alt="artcile">
+                    </div>
+                    <div class="box__text">
+                        <p>It’s another time of preparation for the soon coming of the Lord. Get wisdom, knowledge, and
+                            understanding of the times we are in, as you Join ministers from around the world every
+                            Saturday and Sunday for Loveworld Extra at 12:00 Noon GMT +1.</p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
+                <div class="articles-box">
+                    <div class="box__image">
+                        <img src="/src/new-Innercity.png" alt="artcile">
+                    </div>
+                    <div class="box__text">
+                        <p>
+                            The InnerCity Mission is a faith-based, Child-Centered, Non-Governmental Organization in
+                            consultative status with the United Nations Economic and Social Council. Believing in the
+                            future of indigent children and taking action to reach and meet their needs, is the CORE of
+                            our work.</p>
+                    </div>
+                    <div class="box__button"><button class="button_" type="button">Learn more &raquo;</button></div>
+                </div>
             </div>
         </section>
         <section class="last-section">
             <div class="last-section-wrapper">
-                    <img src="/src/pastorChris.jpg" alt="about">
+                <img src="/src/pastorChris.jpg" alt="about">
                 <div class="mission-text">
                     <p>LoveWorld Incorporated (a.k.a. Christ Embassy) is a global ministry dedicated to spreading God's
-                    divine presence and exemplifying the character of the Holy Spirit to nations worldwide. As a
-                    ministry, we are on a mission to raise generations of men and women who will come into their
-                    inheritance and fulfill God’s purpose for their lives. Through the teaching and demonstration of the
-                    Word of God, we give lives meaning and build a happier world filled with love. Being in Christ
-                    Embassy is more than being in a church—it’s embracing a Vision.</p>
+                        divine presence and exemplifying the character of the Holy Spirit to nations worldwide. As a
+                        ministry, we are on a mission to raise generations of men and women who will come into their
+                        inheritance and fulfill God’s purpose for their lives. Through the teaching and demonstration of
+                        the
+                        Word of God, we give lives meaning and build a happier world filled with love. Being in Christ
+                        Embassy is more than being in a church—it’s embracing a Vision.</p>
 
-                    <p>Our President, Rev. Dr. Chris Oyakhilome DSc. DD, has, through an anointed ministry spanning over 30
-                    years, helped millions experience victorious and purposeful lives in God’s Word. He is the author of
-                    the best-seller Rhapsody of Realities, the number one daily devotional around the world.</p>
+                    <p>Our President, Rev. Dr. Chris Oyakhilome DSc. DD, has, through an anointed ministry spanning over
+                        30
+                        years, helped millions experience victorious and purposeful lives in God’s Word. He is the
+                        author of
+                        the best-seller Rhapsody of Realities, the number one daily devotional around the world.</p>
 
-                    <p>The world-renowned Healing School is part of our ministry, where the healing works of Jesus Christ
-                    are manifested today. Many have received their healing and miracles through the operation of the
-                    gifts of the Spirit at the Healing School.</p>
+                    <p>The world-renowned Healing School is part of our ministry, where the healing works of Jesus
+                        Christ
+                        are manifested today. Many have received their healing and miracles through the operation of the
+                        gifts of the Spirit at the Healing School.</p>
 
-                    <p>It is an honor and privilege for us to share this glorious message with you. In Christ Embassy, we
-                    teach the infallible Word of God and guide men and women to fulfill their divine purpose in Christ.
-                    Together, we are fulfilling God’s vision to take His divine presence to the nations and demonstrate
-                    His love to all.</p>
+                    <p>It is an honor and privilege for us to share this glorious message with you. In Christ Embassy,
+                        we
+                        teach the infallible Word of God and guide men and women to fulfill their divine purpose in
+                        Christ.
+                        Together, we are fulfilling God’s vision to take His divine presence to the nations and
+                        demonstrate
+                        His love to all.</p>
                 </div>
             </div>
         </section>
