LANDING PAGE CSS TOUCHES

--- a/public/pages/home/index.html
+++ b/public/pages/home/index.html
@@ -480,20 +480,20 @@
         <div class="landing-page-footer-container">
             <div class="ft-grd-1">
                 <p>Navigation</p>
-                <a href="/">home</a>
-                <a href="/">watch</a>
-                <a href="/">worship</a>
-                <a href="/">Foundation School</a>
-                <a href="/">about</a>
+                <a href="#home-page">home</a>
+                <a href="/watch">watch</a>
+                <a href="/worship">worship</a>
+                <a href="/foundation-school">Foundation School</a>
+                <a href="/about">about</a>
             </div>
             <div class="ft-grd-2">
                 <p>Quick Links</p>
-                <a href="#">Today`s Rhapsody</a>
-                <a href="#">LoveWorld Singers</a>
-                <a href="#">Pcdl</a>
-                <a href="#">Ceflix</a>
-                <a href="#">Prayathon</a>
-                <a href="#">Unending Praise</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://read.rhapsodyofrealities.org/">Today`s Rhapsody</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://loveworldmusic.org/loveworld-worship-lyrics/">LoveWorld Singers</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://pcdl.co/">Pcdl</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://ceflix.org/">Ceflix</a>
+                <a target="_blank" rel="noopener noreferrer" href="http://unendingpraise.pastorchrislive.org/">Prayathon</a>
+                <a target="_blank" rel="noopener noreferrer" href="#">Unending Praise</a>
             </div>
             <div class="ft-grd-3">
                 <p>Follow Us</p>
@@ -512,12 +512,14 @@
                             </path>
                         </svg>
                     </span>
-                    <span class="kc-icon"></span>
+                    <span class="kc-icon">
+                        <!-- <img src="/src/kclogo.webp" alt=""> -->
+                    </span>
                 </div>
             </div>
         </div>
         <div class="ft-copyright">
-            <p>CE Abarnanje Group ©. All rights reserved.</p>
+            <p>CE Abaranje Group ©. All rights reserved.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
