--- a/public/pages/home/index.html
+++ b/public/pages/home/index.html
@@ -433,8 +433,10 @@
             </section>
             <section class="last-section">
                 <div class="last-section-wrapper">
-                    <img src="/src/pastorChris.jpg" alt="about" />
-                    <div class="mission-text">
+                    <div class="first-grid">
+                        <div class="last-section-img grid-row-1">
+                            <img src="/src/pastorChris.jpg" alt="about" />
+                        </div>
                         <p>
                             LoveWorld Incorporated (a.k.a. Christ Embassy) is a global
                             ministry dedicated to spreading God's divine presence and
@@ -447,31 +449,28 @@
                             Christ Embassy is more than being in a church—it’s embracing a
                             Vision.
                         </p>
-
-                        <p>
-                            Our President, Rev. Dr. Chris Oyakhilome DSc. DD, has, through
-                            an anointed ministry spanning over 30 years, helped millions
-                            experience victorious and purposeful lives in God’s Word. He is
-                            the author of the best-seller Rhapsody of Realities, the number
-                            one daily devotional around the world.
-                        </p>
-
-                        <p>
-                            The world-renowned Healing School is part of our ministry, where
-                            the healing works of Jesus Christ are manifested today. Many
-                            have received their healing and miracles through the operation
-                            of the gifts of the Spirit at the Healing School.
-                        </p>
-
-                        <p>
-                            It is an honor and privilege for us to share this glorious
-                            message with you. In Christ Embassy, we teach the infallible
-                            Word of God and guide men and women to fulfill their divine
-                            purpose in Christ. Together, we are fulfilling God’s vision to
-                            take His divine presence to the nations and demonstrate His love
-                            to all.
-                        </p>
                     </div>
+                    <p class="">
+                        Our President, Rev. Dr. Chris Oyakhilome DSc. DD, has, through
+                        an anointed ministry spanning over 30 years, helped millions
+                        experience victorious and purposeful lives in God’s Word. He is
+                        the author of the best-seller Rhapsody of Realities, the number
+                        one daily devotional around the world.
+                    </p>
+                    <p class="">
+                        The world-renowned Healing School is part of our ministry, where
+                        the healing works of Jesus Christ are manifested today. Many
+                        have received their healing and miracles through the operation
+                        of the gifts of the Spirit at the Healing School.
+                    </p>
+                    <p class="">
+                        It is an honor and privilege for us to share this glorious
+                        message with you. In Christ Embassy, we teach the infallible
+                        Word of God and guide men and women to fulfill their divine
+                        purpose in Christ. Together, we are fulfilling God’s vision to
+                        take His divine presence to the nations and demonstrate His love
+                        to all.
+                    </p>
                 </div>
             </section>
         </div>
@@ -492,8 +491,8 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://loveworldmusic.org/loveworld-worship-lyrics/">LoveWorld Singers</a>
                 <a target="_blank" rel="noopener noreferrer" href="https://pcdl.co/">Pcdl</a>
                 <a target="_blank" rel="noopener noreferrer" href="https://ceflix.org/">Ceflix</a>
-                <a target="_blank" rel="noopener noreferrer" href="http://unendingpraise.pastorchrislive.org/">Prayathon</a>
-                <a target="_blank" rel="noopener noreferrer" href="#">Unending Praise</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.pastorchrislive.org/v2/">Prayathon</a>
+                <a target="_blank" rel="noopener noreferrer" href="http://unendingpraise.pastorchrislive.org/">Unending Praise</a>
             </div>
             <div class="ft-grd-3">
                 <p>Follow Us</p>
