WORSHIP PAGE FRONTEND 100%

--- a/public/pages/home/index.html
+++ b/public/pages/home/index.html
@@ -479,7 +479,7 @@
         <div class="landing-page-footer-container">
             <div class="ft-grd-1">
                 <p>Navigation</p>
-                <a href="#home-page">home</a>
+                <a href="/">home</a>
                 <a href="/watch">watch</a>
                 <a href="/worship">worship</a>
                 <a href="/foundation-school">Foundation School</a>
@@ -512,7 +512,7 @@
                         </svg>
                     </span>
                     <span class="kc-icon">
-                        <!-- <img src="/src/kclogo.webp" alt=""> -->
+                        <img src="/src/kclogo.svg" alt="logo">
                     </span>
                 </div>
             </div>
