--- a/public/pages/login/login.html
+++ b/public/pages/login/login.html
@@ -10,7 +10,7 @@
         <script src="https://kit.fontawesome.com/ecf5b4f981.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
-        <title>Login | CeAbaranje</title>
+        <title>Login-Christ Embassy Abaranje Group</title>
     </head>
     <body>
         <div id="toastBox"></div>
