--- a/public/pages/register/register.html
+++ b/public/pages/register/register.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/pages/register/register.css">
     <script src="https://kit.fontawesome.com/ecf5b4f981.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <title>CHRIST EMBASSY ABARANJE || REGISTER</title>
+    <title>REGISTER-Christ Embassy Abaranje Group</title>
 </head>
 <body>
     <div id="toastBox"></div>
