WORSHIP PAGE TWEAKS

--- a/public/pages/worship/worship.html
+++ b/public/pages/worship/worship.html
@@ -134,11 +134,15 @@
                     <label for="message">Message (optional)</label>
                     <textarea id="message" name="message" placeholder="Enter your message"></textarea>
                 </div>
+                <div class="form-button">
+                    <button type="submit">Submit</button>
+                </div>
             </form>  
         </div>
         <div class="map-container">
             <iframe title="map-location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.939403845556!2d3.2375089741151952!3d6.529337823097285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b853a5f71eabd%3A0xb8ed7abeb2ce931a!2sChrist%20Embassy%20Abaranje%201!5e0!3m2!1sen!2sng!4v1735848282661!5m2!1sen!2sng" width="100%" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
     </main>
     <footer class="landing-page-footer">
         <div class="landing-page-footer-container">
